--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,27 +3,27 @@ kind: Deployment
 metadata:
   annotations:
     app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
-    app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
+    app.openshift.io/vcs-uri: https://github.com/upslopeio/alessandro-lumino-node-sample-app
   labels:
-    app: express-sample-app
-    app.kubernetes.io/instance: express-sample-app-instance
-    app.kubernetes.io/name: express-sample-app
+    app: alessandro-lumino-node-sample-app
+    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
+    app.kubernetes.io/name: alessandro-lumino-node-sample-app
     app.openshift.io/runtime: js
-  name: express-sample-app
+  name: alessandro-lumino-node-sample-app
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/instance: express-sample-app-instance
-      app.kubernetes.io/name: express-sample-app
+      app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
+      app.kubernetes.io/name: alessandro-lumino-node-sample-app
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app.kubernetes.io/instance: express-sample-app-instance
-        app.kubernetes.io/name: express-sample-app
+        app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
+        app.kubernetes.io/name: alessandro-lumino-node-sample-app
     spec:
       containers:
         - env:
@@ -31,7 +31,7 @@ spec:
             - name: PROTOCOLS
             - name: LOG_LEVEL
               value: debug
-          image: quay.io/upslopeio/express-sample-app
+          image: quay.io/upslopeio/alessandro-lumino-node-sample-app
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
@@ -42,7 +42,7 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
-          name: express-sample-app
+          name: alessandro-lumino-node-sample-app
           ports:
             - containerPort: 3000
               name: http
