--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yaml
-- service.yaml
-- route.yaml
+  - deployment.yaml
+  - service.yaml
+  - route.yaml
 commonLabels:
-  app: alessandro-lumino-node-sample-app
-  app.kubernetes.io/instance: alessandro-lumino-node-sample-app
-  app.kubernetes.io/name: alessandro-lumino-node-sample-app
+  app: sample
+  app.kubernetes.io/instance: sample-instance
+  app.kubernetes.io/name: sample
