--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: alessandro-lumino-node-sample-app
-    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
-    app.kubernetes.io/name: alessandro-lumino-node-sample-app
-  name: alessandro-lumino-node-sample-app
+    app: sample
+    app.kubernetes.io/instance: sample-instance
+    app.kubernetes.io/name: sample
+  name: sample
 spec:
   ports:
     - name: http
@@ -13,7 +13,7 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
-    app.kubernetes.io/name: alessandro-lumino-node-sample-app
+    app.kubernetes.io/instance: sample-instance
+    app.kubernetes.io/name: sample
   sessionAffinity: None
   type: ClusterIP
